--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,22 +24,26 @@ android {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 dependencies {
-    def nav_version = "1.0.0-rc02"
+    def nav_version = "1.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     kapt "com.android.databinding:compiler:3.1.4"
 
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
 
     implementation 'org.koin:koin-android-viewmodel:1.0.2'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
@@ -50,7 +54,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version" // use -ktx for Kotlin
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version" // use -ktx for Kotlin
 
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     implementation 'org.apache.commons:commons-lang3:3.0'
 
