--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     kapt "com.android.databinding:compiler:3.1.4"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03"
+
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha03"
+//    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-ktx', version: '2.1.0-alpha03'
+
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
 
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
 
@@ -43,7 +49,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
