--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,10 @@
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:hardwareAccelerated="true"
-            android:label="@string/app_name"
             android:name=".RecyclingApplication"
             android:theme="@style/AppTheme">
         <activity
-                android:name="org.fuzz.wellyrecycling.MainActivity"
-                android:label="@string/app_name">
+                android:name="org.fuzz.wellyrecycling.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
